do'nt require boost options in mongoclient SERVER-855